* Changed muninn-serach behaviour: when prodided with `-p '*'`, it will fetch
  all fields of all namespaces.

* Added muninn-info to display generic archive information (currently, the 
  availables namespaces and product types)

* muninn.Archive.product_path() argument can be a product properties Struct.

* Added tabulate package to format the output

* muninn.Archive.update_properties() takes an optional 'create_namespaces'
  parameter that, if set, will create any undefined namespaces for a product.

* New product plugin method 'post_pull_hook' is called after a successful
  pull.

* New product plugin method 'post_create_hook' is called after a successful
  product creation (either ingest or pull).

* Added support for python3

* Close SQL connection after each operation (ingestion/search/etc.)

* Added support for separate auth_file that can contain credentials for
  downloads performed using muninn-pull.

* Added -f option to muninn-strip.

* Fixed issue where geometry columns in namespace extensions were not
  created with the sqlite backend.

4.0 2017-03-31
~~~~~~~~~~~~~~

* Changed license of muninn to BSD.

* Muninn can now be used as a pure catalogue server.
  An archive root directory is still needed, but can remain empty.

* Changed the core schema:
  - core.archive_date is now optional and is only set if core.archive_path is
    set.
    It will reflect the time at which the product was stored in the archive.
  - added core.metadata_date which represents the last modification time of
    the metadata record. It will automatically be updated if the metadata is
    changed via the muninn interfaces.
  - added optional core.remote_url field which can contain urls of the form
    file://, http://, ftp://, etc. that point to a remote location of the
    product.

* The schema_name option for the postgresql backend has been removed.
  This is now replaced by a table_prefix option that is applicable for
  both the postgresql and sqlite backends.
