@@ -1,3 +1,5 @@
+* Added option to ingest products already in the root archive folder without copying.
+
 * Changed muninn-serach behaviour: when prodided with `-p '*'`, it will fetch
   all fields of all namespaces.
 
